deployment/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ocp-audit
