deployment/postgres-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: ocp-audit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: docker.io/library/postgres:18-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-data-v18
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ocp-audit
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
