deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocpaudit
  namespace: ocp-audit
  labels:
    app: ocpaudit
spec:
  selector:
    app: ocpaudit
  ports:
    - name: http
      port: 8080
      targetPort: http
